--- a/styles/music-page-styles.css
+++ b/styles/music-page-styles.css
@@ -10,6 +10,7 @@
 
 /* General music player style */
 .music-player {
+  margin-top: 16px;
   color: var(--color-primary-light);
   background-color: var(--color-primary-dark);
   background-image: linear-gradient(
@@ -17,6 +18,10 @@
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0.2)
   );
+}
+
+.music-player-head {
+  padding: 24px 16px;
 }
 
 /* Music player display */
@@ -46,7 +51,7 @@ audio::-webkit-media-controls-panel {
 .song-display {
   position: relative;
   display: flex;
-  padding: 16px 16px;
+  padding: 24px 16px;
   border-top: 1px solid var(--color-primary-light);
 }
 
@@ -129,8 +134,13 @@ footer {
   }
 
   .music-player {
+    margin-top: 0;
     border-radius: min(100vw - 480px, var(--corner-radius));
     box-shadow: 2px 2px 4px black;
+  }
+
+  .music-player-head {
+    padding: 16px;
   }
 
   .current-song:last-child {
@@ -177,6 +187,11 @@ footer {
   .mobile-content-wrapper .music-player {
     flex: 1;
   }
+
+  .song-display {
+    padding: 16px;
+  }
+
 
   .desktop-img-container {
     flex: 1;
